# meta-package-manager

./: .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: brew.rs  simple.rs
genpack-cli/: Cargo.toml
genpack-cli/src/: main.rs
genpack-cli/src/utils/: parser.rs
genpack/src/: libdoc.md  managers.rs
genpack/tests/: basic.rs
libmpm/: Cargo.toml
libmpm/src/: lib.rs  verify.rs
libmpm/tests/: basic.rs
mpm/: Cargo.toml
mpm-cli/: Cargo.toml
mpm-cli/src/: utils.rs
mpm-cli/src/utils/: manager.rs  print.rs
mpm/src/: libdoc.md  utils.rs
mpm/src/managers/: dnf.rs
mpm/src/utils/: manager.rs  parser.rs  print.rs
mpm/tests/: basic.rs
src/: brew.rs  cli.rs  common.rs  lib.rs  libdoc.md  libtests.rs  main.rs  managers.rs  print.rs  traits.rs  verify.rs
src/managers/: apt.rs  brew.rs  choco.rs  dnf.rs  flatpak.rs  mod.rs  yum.rs  zypper.rs
src/utils/: manager.rs  mod.rs  parser.rs  print.rs
tests/: basic.rs  test_basic.rs
