[package]
name = "mpm"
version = "0.7.3"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
sudo = "0.6"
xmltree = "0.10"
os_info = "3.8.2"
strum = { version = "0.26", features = ["derive"] }
tabled = "0.15"
tracing = "0.1.40"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ambassador = "0.4.1"
serde_json = "1.0.121"
serde = "1.0.204"
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
tracing-test = "0.2.5"
