[package]
name = "mpm"
version = "0.7.4"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
sudo = "0.6"
xmltree = "0.11"
os_info = "3.8.2"
strum = { version = "0.26", features = ["derive"] }
tabled = { version = "0.16", features = ["ansi"] }
tracing = "0.1.40"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ambassador = "0.4.1"
serde_json = "1.0.128"
serde = "1.0.210"
url = { version = "2.5.2", features = ["serde"] }
run-script-rs = { git = "https://github.com/SubconsciousCompute/run-script-rs", tag = "v0.2.1" }

[dev-dependencies]
tracing-test = "0.2.5"


