[package]
name = "mpm"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
strum = { version = "0.25.0", features = ["derive"] }
tabled = { version = "0.14.0", features = ["color"] }
libmpm = { path = "../libmpm", features = [
  "verify",
  "brew",
  "choco",
  "apt",
  "dnf",
  "yum",
] }
